Upgrade from the UI
yay 👏
